--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ crashlytics-build.properties
 .vsconfig
 UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2021.dwlt
+ProjectSettings/Physics2DSettings.asset
